tests/cases/parser/types/unclose_type_args.stderr
error: expected an operator, however received a `:`
 --> $DIR/unclose_type_args.hash:3:5
2 |   
3 |   k<t := do_something();
  |       ^ 
  = help: consider adding either `.`, `=`, or `;`
