tests/cases/parser/types/unclose_type_args.hash
// run=fail, stage=parse

k<t := do_something();
